[gd_scene load_steps=11 format=2]

[ext_resource path="res://Merchant/ShopItems/ShopItem.gd" type="Script" id=1]
[ext_resource path="res://UI/Font/manaspc.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Tilesheets/images/colored_transparent_packed_234.png" type="Texture" id=3]
[ext_resource path="res://Items/ItemSpawner.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 17.4318

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.27451 )
draw_center = false

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "animate_shop_item"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ), Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ShopItem" type="Node2D" groups=[
"ShopItem",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.5, 0.5 )

[node name="PickupRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRadius"]
shape = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_top = -30.0
margin_right = 75.0
margin_bottom = 10.0
rect_min_size = Vector2( 100, 40 )
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemNameLabel" type="Label" parent="Panel/VBoxContainer"]
margin_left = 27.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
text = "Item name"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_left = 38.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldTexture" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSpawner" type="Node" parent="."]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate_shop_item = SubResource( 6 )
[connection signal="body_entered" from="PickupRadius" to="." method="_on_PickupRadius_body_entered"]
[connection signal="body_exited" from="PickupRadius" to="." method="_on_PickupRadius_body_exited"]
